welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:5: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: (Int, Int, Int, Boolean)
	case (_,_) => return false
             ^