welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
(a,b,c,bOk) match {
	case (w,x,y,z) if (bOk==false && b>a && c>b) => return true
	case (w,x,y,z) if (bOk==true && c>b) => return true
	case (_,_) => return false
}
}
